fixing some stupid stuff again

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ spaCyWork/Data/SpacyData/Vocab/strings.json
 spaCyWork/Data/SpacyData/Vocab/vectors
 spaCyWork/Data/SpacyData/Vocab/vectors.cfg
 spaCyWork/Data/allArticles.txt
+.DS_Store
+spaCyWork/.DS_Store
